public/stylesheets/sass/product.scss
#page_products_show.pub {
    #product_title {
        margin-top: 20px;
    }
    #humane_price {

    }
    #design_your_bags {
        margin-top: 40px;
        margin-bottom: 100px;
    }
    #product_logo {
        margin: 20px 0;
    }
    .left_col .content {
        padding: 0;

        nav {
            padding: 5px;
        }
        #product_description {
            padding: 5px;
            margin-top: 10px;
        }
    }
    .right_col .content {
        padding: 0;
        .text_content {
            padding: 10px;
        }
    }
    #illustration {
        width: 470px;
        height: 353px;
        -webkit-background-size: 470px 353px;
        -moz-background-size: 470px 353px;
        background-size: 470px 353px;
        background-repeat: no-repeat;
        background-position: center center;
    }
}

